Added tests for Products and ProductDetails